<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#504C4D"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="200"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textColor="#29A5A1"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/txtEntrada1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="200"
        android:text="@string/txt_entrada1"
        android:textAlignment="center"
        android:textColor="#29A5A1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/editTimeEntrada1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:ems="10"
        android:hint="@string/txt_hint"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#9C9496"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrada1" />

    <TextView
        android:id="@+id/txtSaida1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="200"
        android:text="@string/txt_saida1"
        android:textAlignment="center"
        android:textColor="#29A5A1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTimeEntrada1" />

    <EditText
        android:id="@+id/editTimeSaida1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:ems="10"
        android:hint="@string/txt_hint"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#9C9496"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaida1" />

    <TextView
        android:id="@+id/txtEntrada2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="200"
        android:text="@string/txt_entrada2"
        android:textAlignment="center"
        android:textColor="#29A5A1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTimeSaida1" />

    <EditText
        android:id="@+id/editTimeEntrada2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:ems="10"
        android:hint="@string/txt_hint"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#9C9496"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrada2" />

    <TextView
        android:id="@+id/txtSaida2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="200"
        android:text="@string/txt_saida2"
        android:textAlignment="center"
        android:textColor="#29A5A1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTimeEntrada2" />

    <EditText
        android:id="@+id/editTimeSaida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaida2" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:backgroundTint="#29A5A1"
        android:text="@string/txt_button_calcular"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTimeSaida2"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:backgroundTint="#29A5A1"
        android:text="@string/txt_button_limpar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>